--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,8 @@ BRAINVISA_PROJECT()
 BRAINVISA_COPY_PYTHON_DIRECTORY( "${CMAKE_CURRENT_SOURCE_DIR}/brainvisa"
                                  ${PROJECT_NAME} )
 
+BRAINVISA_COPY_PYTHON_DIRECTORY( "${CMAKE_CURRENT_SOURCE_DIR}/python"
+                                 ${PROJECT_NAME} )
+
 BRAINVISA_CREATE_CMAKE_CONFIG_FILES()
 
