The doc image directory has been modified
git-svn-id: https://bioproj.extra.cea.fr/neurosvn/brainvisa/cortical_surface/cortical_surface-gpl/trunk@58566 613412ce-1361-4b7a-93bf-a3c75af1bae4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ BRAINVISA_COPY_DIRECTORY( "${CMAKE_CURRENT_SOURCE_DIR}/share-data"
                           share/brainvisa-share-${brainvisa-share_VERSION_MAJOR}.${brainvisa-share_VERSION_MINOR}
                           ${PROJECT_NAME} )
 BRAINVISA_COPY_DIRECTORY( "${CMAKE_CURRENT_SOURCE_DIR}/share/doc/images"
-                          share/doc/axon-${axon_VERSION_MAJOR}.${axon_VERSION_MINOR}/images
+                          share/doc/cortical_surface-gpl-${axon_VERSION_MAJOR}.${axon_VERSION_MINOR}/images
                           ${PROJECT_NAME} )
 
 BRAINVISA_CREATE_CMAKE_CONFIG_FILES()
