fixed packaging dependencies
git-svn-id: https://bioproj.extra.cea.fr/neurosvn/brainvisa/cortical_surface/cortical_surface-gpl/branches/4.4@60267 613412ce-1361-4b7a-93bf-a3c75af1bae4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required( VERSION 2.6 )
 find_package( brainvisa-cmake REQUIRED )
-BRAINVISA_FIND_PACKAGE( brainvisa-share )
+BRAINVISA_FIND_PACKAGE( brainvisa-share REQUIRED )
+BRAINVISA_FIND_PACKAGE( axon REQUIRED )
+BRAINVISA_FIND_PACKAGE( morphologist-gpl QUIET )
 BRAINVISA_PROJECT()
+
+BRAINVISA_DEPENDENCY( RUN DEPENDS "morphologist-gpl" RUN ">= ${morphologist-gpl_VERSION_MAJOR}.${morphologist-gpl_VERSION_MINOR}" )
+BRAINVISA_DEPENDENCY( RUN DEPENDS "axon" RUN ">= ${axon_VERSION_MAJOR}.${axon_VERSION_MINOR}" )
 
 BRAINVISA_COPY_PYTHON_DIRECTORY( "${CMAKE_CURRENT_SOURCE_DIR}/brainvisa"
                                  ${PROJECT_NAME} )
