Added publication channel

--- a/soma-env/soma-env-recipe.yaml
+++ b/soma-env/soma-env-recipe.yaml
@@ -2,6 +2,7 @@ package:
   name: cortical-surface
 
 soma-env:
+  publication: neuro-forge
   components:
     cortical_surface-nonfree: ["https://github.com/brainvisa/cortical_surface-nonfree.git", "master"]
 
