--- a/soma-env/soma-env-recipe.yaml
+++ b/soma-env/soma-env-recipe.yaml
@@ -4,7 +4,8 @@ package:
 soma-env:
   publication: neuro-forge
   components:
-    cortical_surface-nonfree: ["https://github.com/brainvisa/cortical_surface-nonfree.git", "master"]
+    - cortical_surface-gpl
+    - cortical_surface-nonfree
 
   internal-dependencies:
     - morphologist
